Refactor the 'resolved' event to 'resolve'.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/unit/testLibs.html
+++ b/test/unit/testLibs.html
@@ -163,8 +163,8 @@
           'selector': 'b.unittest'
         }
       });
-      _testCollection.listenTo(_test, 'resolved', function (eventName, thisTest, _case) {
-        ok(eventName === 'resolved', 'Test bubbles up Case resolved events');
+      _testCollection.listenTo(_test, 'resolve', function (eventName, thisTest, _case) {
+        ok(eventName === 'resolve', 'Test bubbles up Case resolve events');
         start();
       });
       _test.invoke();
