Refactor 'NotTested' to 'notTested'.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/core/preFilter.html
+++ b/test/core/preFilter.html
@@ -40,7 +40,7 @@
             }
           },
           complete : function(eventName, thisTest, _case) {
-            equal('NotTested', _case.get('status'), 'Image was filtered out.');
+            equal('notTested', _case.get('status'), 'Image was filtered out.');
             start();
           }
         });
