--- a/test/unit/testLibs.html
+++ b/test/unit/testLibs.html
@@ -170,7 +170,7 @@
       _test.invoke();
     });
     asyncTest('Event dispatching: complete', function () {
-      expect(1);
+      expect(2);
       var count = 0;
       _testCollection = new libs.TestCollection();
       // This selects 10 instances of this element.
@@ -180,13 +180,14 @@
           'selector': 'i.unittest'
         }
       });
-      // Add a Case that will time out.
-      _test.add(new libs.Case());
       // The complete event should only be invoked once.
       _testCollection.listenTo(_test, 'complete', function (eventName, thisTest) {
+        equal(thisTest.length, 11, 'Eleven Cases resolved.');
         ok(eventName === 'complete', 'Test dispatches a complete event when all Cases have resolved.');
         start();
       });
+      // Add a Case that will time out.
+      _test.add(new libs.Case());
       _test.invoke();
     });
     // asyncTest('Event dispatching: fail', function () {
@@ -233,6 +234,32 @@
         ok(_test instanceof libs.Test, 'Test is the constructor of _test');
       });
       equal(i, 1, 'TestCollection.fn.each looped 2 times');
+    });
+    asyncTest('Event dispatching: complete', function () {
+      expect(2);
+      _testCollection = new libs.TestCollection();
+      // @todo, we need a mockable object that will listen to events.
+      var listener = new libs.TestCollection();
+      listener.listenTo(_testCollection, 'complete', function (eventName, testCollection) {
+        equal(testCollection.length, 6, 'Six tests completed.');
+        ok(eventName === 'complete', 'TestCollection dispatches a complete event when all Tests have completed.');
+        start();
+      });
+      // Create a few fake tests and add them to the collection.
+      for (var i = 0; i < 5; ++i) {
+        _test = new libs.Test('fakeTest-' + i, {
+          'type': 'selector',
+          'options': {
+            'selector': 'i.unittest'
+          }
+        });
+        _testCollection.add(_test);
+      }
+      // Add a test that will time out.
+      _testCollection.add(new libs.Test('timeoutTest', {
+        'type': 'selector'
+      }));
+      _testCollection.run();
     });
   </script>
 </body>
