--- a/test/accessibility-tests/documentHasTitleElement-fail.html
+++ b/test/accessibility-tests/documentHasTitleElement-fail.html
@@ -12,7 +12,7 @@
         $(document).quail({ jsonPath : '../../dist',
           guideline : [ 'documentHasTitleElement' ],
           reset : true,
-          complete : function(eventName, thisTest, _case) {
+          caseResolve : function(eventName, thisTest, _case) {
         		ok(_case.get('status') === 'failed', 'The document does not have a title element.');
             start();
           }
