--- a/test/accessibility-tests/documentHasTitleElement-pass.html
+++ b/test/accessibility-tests/documentHasTitleElement-pass.html
@@ -13,7 +13,7 @@
           $(document).quail({ jsonPath : '../../dist',
             guideline : [ 'documentHasTitleElement' ],
             reset : true,
-            complete : function(eventName, thisTest, _case) {
+            caseResolve : function(eventName, thisTest, _case) {
               ok(_case.get('status') === 'passed', 'The document has a title element.');
               start();
             }
