--- a/test/accessibility-tests/documentTitleDescribesDocument.html
+++ b/test/accessibility-tests/documentTitleDescribesDocument.html
@@ -13,7 +13,7 @@
         $(document).quail({ jsonPath : '../../dist',
           guideline : [ 'documentTitleDescribesDocument' ],
           reset : true,
-          complete : function(eventName, thisTest, _case) {
+          caseResolve : function(eventName, thisTest, _case) {
             ok(_case.get('status') === 'failed', 'Title element higlighted as possible fail');
             start();
           }
