--- a/test/core/guidelineFallback.html
+++ b/test/core/guidelineFallback.html
@@ -24,7 +24,7 @@
         $('.test-area').quail({
           jsonPath : '../../dist',
           reset : true,
-          complete : function(eventName, thisTest, _case) {
+          caseResolve : function(eventName, thisTest, _case) {
             if (thisTest.get('name') === 'imgHasAlt' && !found) {
               equal('IMG', _case.get('element').tagName, 'Default guideline has run');
               found = true;
