Black and white are flip-flopped
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -200,7 +200,7 @@
     <p>This test is readable, thanks to the kids</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontSizing:pass|colorBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-9">
+  <div class="quail-test" data-expected="colorFontSizing:fail|colorBackgroundGradientContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-9">
     <p>This test is not readable</p>
   </div>
 
