Basic text test, no manipulation
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -168,6 +168,10 @@
   </style>
 </head>
 <body>
+  <div class="quail-test" data-expected="colorFontContrast:pass" data-accessibility-test="cssTextHasContrast" id="test-0">
+    <p>This text is readable</p>
+  </div>
+
   <div class="quail-test" data-expected="colorFontContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-1">
     <p>This text is not readable</p>
   </div>
