refactor the top-level complete callback to testCollectionComplete. complete really needs to be saved for the full evaluation
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/accessibility-tests/cssTextHasContrast.html
+++ b/test/accessibility-tests/cssTextHasContrast.html
@@ -239,7 +239,7 @@
     <p class="txt">This test is not readable.</p>
   </div>
 
-  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:fail|colorElementBehindBackgroundImageContrast:fail" data-accessibility-test="cssTextHasContrast" id="test-19">
+  <div class="quail-test" data-expected="colorFontContrast:pass|colorBackgroundImageContrast:cantTell" data-accessibility-test="cssTextHasContrast" id="test-19">
     <p>This test is readable, non existing background</p>
   </div>
 
