--- a/test/core/eventComplete.html
+++ b/test/core/eventComplete.html
@@ -18,7 +18,7 @@
           jsonPath : '../../dist',
           guideline : [ 'imgHasAlt' ],
           reset : true,
-          complete : function(eventName, testCollection) {
+          testCollectionComplete : function(eventName, testCollection) {
             ok(typeof eventName === 'string', 'The eventname argument is a string');
             equal(eventName, 'complete', 'The name of the event is \'complete\'');
             ok(testCollection instanceof quail.lib.TestCollection, 'The test argument is an instance of quail.lib.TestCollection');
