--- a/test/core/guidelineFiltering.html
+++ b/test/core/guidelineFiltering.html
@@ -16,7 +16,7 @@
         $('body').quail({
           jsonPath : '../../dist',
           guideline: ['cssTextHasContrast'],
-          complete : function(eventName, testCollection) {
+          testCollectionComplete : function(eventName, testCollection) {
             equal(testCollection.length, 1, 'One test was run.');
             ok(testCollection.find('cssTextHasContrast'), 'The cssTextHasContrast exists in the TestCollection.');
             start();
