Fixed search for start/stop punctuation.

--- a/test/accessibility-tests/languageDirectionPunctuation.html
+++ b/test/accessibility-tests/languageDirectionPunctuation.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="quail-test" data-expected="notApplicable" data-accessibility-test="languageDirectionPunctuation">
-      <p>This paragraph has no language changes.</p>
+      <p dir="ltr">This paragraph has no language changes.</p>
     </div>
 
     <div class="quail-test" data-expected="p:fail|span:notApplicable" data-accessibility-test="languageDirectionPunctuation">
