Development work to process the Success Criteria 4.1.2 on a case by base basis. Passing this off to attiks.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/guideline-tests/SuccessCriteria-1.4.3.html
+++ b/test/guideline-tests/SuccessCriteria-1.4.3.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Success Criteria 1.4.3.</title>
+  <title>Success Criteria 1.4.3</title>
   <style>
     #test-scope {
       font-size: x-large;
