--- a/test/guideline-tests/SuccessCriteria-4.1.2.html
+++ b/test/guideline-tests/SuccessCriteria-4.1.2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Success Criteria 1.4.3.</title>
+  <title>Success Criteria 4.1.2</title>
   <style>
     #test-scope {
       font-size: x-large;
@@ -19,7 +19,7 @@
   <script src="../quail-testrunner.js"></script>
   <script>
     (function(global) {
-      asyncTest('Success Criteria 1.4.3', function () {
+      asyncTest('Success Criteria 4.1.2', function () {
         expect(3);
         $('#test-scope').quail({
           jsonPath : '../../dist',
