Fix the testLib.html tests. I broke them with the SuccessCriteria work.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/unit/testLibs.html
+++ b/test/unit/testLibs.html
@@ -376,7 +376,7 @@
         });
         testCollection.add(test);
       }
-      sc.add(testCollection);
+      sc.registerTests(testCollection);
       testCollection.run();
     });
   </script>
